增大markdown中公式的字体大小

--- a/梯度下降中，为什么梯度的方向是最陡峭的呢？.md
+++ b/梯度下降中，为什么梯度的方向是最陡峭的呢？.md
@@ -13,6 +13,7 @@
 假设有一个单位向量 $ \mathbf{u} $ ，点 $ \mathbf{x} $ 沿着 $ \mathbf{u} $ 方向的变化率为：
 
 $$
+\Large
 \begin{aligned} 
     D_\mathbf{u}f(\mathbf{x}) = \lim_{h\to \infty} \tfrac{f(\mathbf{x} + h\mathbf{u}) - f(\mathbf{x})}{h}
 \end{aligned}
@@ -23,6 +24,7 @@ $$
 如果 $ f $ 可微，则在点 $ \mathbf{a} $ 处的近似展开式为：
 
 $$
+\Large
 \begin{aligned}
     f(\mathbf{x}) = f(\mathbf{a}) + f'_{x_1}(\mathbf{a})(x_1 - a_1) + ... + f'_{x_n}(\mathbf{a})(x_n - a_n)
 \end{aligned}
@@ -31,6 +33,7 @@ $$
 则有：
 
 $$
+\Large
 \begin{aligned}
 D_\mathbf{u}f(\mathbf{a}) &= \lim_{h\to \infty} \tfrac{f(\mathbf{a} + h\mathbf{u}) - f(\mathbf{a})}{h} \\
 &= \lim_{h\to \infty} \tfrac{f'_{x_1}(\mathbf{a})hu_1 + f'_{x_2}(\mathbf{a})hu2 + ... + f'_{x_n}(\mathbf{a})hu_n}{h} \\
@@ -44,6 +47,7 @@ $$
 问题就转变为求解
 
 $$
+\Large
 \begin{aligned}
 \mathbf{u^*} = \arg\max_{\mathbf{u}} \nabla f(\mathbf{a}) \cdot \mathbf{u}
 \end{aligned}
