第6章 与学习相关的技巧

--- a/梯度下降中，为什么梯度的方向是最陡峭的呢？.md
+++ b/梯度下降中，为什么梯度的方向是最陡峭的呢？.md
@@ -81,6 +81,7 @@ $$
 方向导数描述的是函数在某一点沿某个特定方向的变化率。如果我们用一个单位向量 $ \vec{u} $ 表示某个方向，那么方向导数可以通过梯度与 $ \vec{u} $ 的点积计算：
 
 $$
+\Large
 \begin{aligned}
 D_{\vec{u}}f = \nabla f \cdot \vec{u}
 \end{aligned}
@@ -90,6 +91,7 @@ $$
 因为 $ \vec{u} $ 是单位向量（$ |\vec{u}| = 1 $），所以：
 
 $$
+\Large
 \begin{aligned}
 D_{\vec{u}}f = |\nabla f| \cos(\theta)
 \end{aligned}
@@ -97,7 +99,7 @@ $$
 
 - 当 $ \theta = 0 $ （即 $ \vec{u} $ 与梯度方向一致）时，$ \cos(\theta) = 1 $ ，方向导数达到最大值 $ |\nabla f| $ ，也就是函数增加最快的方向。
 - 当 $ \theta = \pi $ （即 $ \vec{u} $ 与梯度方向相反）时，$ \cos(\theta) = -1 $ ，方向导数达到最小值 $ -|\nabla f| $ ，也就是函数减少最快的方向。
-- 当 $ \theta = \frac{\pi}{2} $ （即 $ \vec{u} $ 与梯度方向垂直）时，$ \cos(\theta) = 0 $ ，方向导数达到最小值 $ 0 $ ，也就是函数变化最慢的方向。
+- 当 $ \theta = \large \frac{\pi}{2} $ （即 $ \vec{u} $ 与梯度方向垂直）时，$ \cos(\theta) = 0 $ ，方向导数达到最小值 $ 0 $ ，也就是函数变化最慢的方向。
 
 因此，梯度方向就是函数上升最陡峭的方向，反方向则是下降最陡峭的方向，而垂直方向是变化最慢的方向。
 
@@ -113,6 +115,7 @@ $$
 在梯度下降中，我们希望最小化损失函数（$ L $）。因此更新规则是：
 
 $$
+\Large
 \begin{aligned}
 \theta = \theta - \eta \nabla L
 \end{aligned}
